tests/ui/control_handling_reintroduction.stderr
error[E0433]: cannot find `ControlHandling` in `cap`
 --> tests/ui/control_handling_reintroduction.rs:2:37
  |
2 | ...te::cap::ControlHandling::Canonical;
  |             ^^^^^^^^^^^^^^^ could not find `ControlHandling` in `cap`
