tests/ui/control_handling_reintroduction.rs
fn main() {
    let _ = hibana::substrate::cap::ControlHandling::Canonical;
}
